# review-app

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  review-config.yml
app/: api.py  config.py  context_builder.py  context_generator.py  context_store.py  database.py  github_app_setup.py  github_auth.py  indexer.py  main.py  models.py  persistence.py  plane_client.py  repo_cloner.py  review_config.py  review_engine.py  worker.py
dashboard/: .env.example  Dockerfile  package.json
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/dashboard/: page.tsx
dashboard/src/app/devs/: page.tsx
dashboard/src/app/devs/[login]/: page.tsx
dashboard/src/app/repos/: page.tsx
dashboard/src/app/repos/[owner]/[repo]/: page.tsx
dashboard/src/app/reviews/[id]/: page.tsx
dashboard/src/components/: Badge.tsx  Sidebar.tsx
dashboard/src/lib/: api.ts  auth.ts
docs/: propuesta-api-anthropic.md
scripts/: test_e2e.sh
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/fixtures/: github_pr_diff.json  plane_issue.json  webhook_pr_opened.json  webhook_pr_synchronize.json
tests/integration/: test_api_endpoints.py  test_persistence.py
tests/unit/: test_indexer.py  test_review_engine.py  test_webhook_utils.py
